        - Fix incorrect behavior on custom result_class inflators altering
          the amount of returned results
        - Fix failure to detect stable order criteria when in iterator
          mode of a has_many prefetch off a search_related chain
        - Prevent erroneous database hit when accessing prefetched related
          resultsets with no rows
        - Fix incorrect handling of custom relationship conditions returning
          SQLA literal expressions
        - Fix long standing bug with populate() missing data from hashrefs with
          different keysets: http://is.gd/2011_dbic_populate_gotcha (RT#92723)
        - Fix multi-value literal populate not working with simplified bind
          specifications
        - Massively improve the implied resultset condition parsing - now all
          applicable conditions within a resultset should be properly picked
          up by create() and populate()
        - Ensure definitive condition extractor handles bizarre corner cases
          without bombing out (RT#93244)
        - Fix set_column on non-native (+columns) selections (RT#86685)
        - Fix set_inflated_column incorrectly handling \[] literals (GH#44)
        - Ensure that setting a column to a literal invariably marks it dirty
        - Work around exception objects with broken string overloading in one
          additional codepath (missed in 0.08260)
        - Fix inability to handle multiple consecutive transactions with
          savepoints on DBD::SQLite < 1.39
        - Fix CDBICompat to match Class::DBI behavior handling non-result
          blessed has_a (implicit deflate via stringification and inflate via
          blind new) (GH#51)

    * Misc
        - Ensure source metadata calls always take place on the result source
          instance registered with the caller
        - IFF DBIC_TRACE output defaults to STDERR we now silence the possible
          wide-char warnings if the trace happens to contain unicode